# nikita

./: .env.example  .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml  run.py
docker/nikita/: Dockerfile
nikita/mongo/: mongo.py
nikita/mongo/models/: data_models.py
nikita/service/: __init__.py  nikita.py
notebooks/: notebook.ipynb
